# masskit

./: .dockerignore  Dockerfile  README.md  analyze.py  run_demo.py  setup.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
core/: CMakeLists.txt
core/bindings/: python_bindings.cpp
core/include/lcms/: lcms.hpp
core/include/lcms/io/: base64.hpp
core/src/: base64.cpp  mzml_reader.cpp  mzxml_reader.cpp
examples/: cpp_example.cpp  python_example.py
java/: pom.xml
java/src/main/java/org/lcms/gui/: LCMSViewer.java
java/src/test/java/org/lcms/: ChromatogramTest.java  ConsensusMapTest.java  IsotopePatternTest.java  MSExperimentTest.java
python/: MANIFEST.in  README.md  pyproject.toml  setup.py
python/benchmarks/: bench_gb_streaming.py  bench_large_mzml.py
python/masskit/: __init__.py  algorithms.py  annotation.py  chromatogram.py  cli.py  cloud.py  config.py  exceptions.py  experiment.py  feature.py  formats.py  identification.py  interactive_viz.py  io.py  isotope.py  labeling.py  memmap.py  parallel.py  peak.py  plugins.py  qc.py  quantification.py  reporting.py  rt_prediction.py  spectral_matching.py  spectrum.py  statistics.py  streaming.py  validation.py  visualization.py  workflows.py
python/tests/: conftest.py  test_annotation.py  test_benchmark_smoke.py  test_chromatogram.py  test_cli.py  test_cli_config.py  test_cli_extended.py  test_cloud.py  test_config.py  test_exceptions.py  test_feature.py  test_formats.py  test_identification.py  test_identification_extended.py  test_integration.py  test_io.py  test_io_extended.py  test_isotope.py  test_labeling.py  test_memmap.py  test_parallel.py  test_plugins.py  test_quantification.py  test_real_public_data.py  test_reporting.py  test_rt_prediction.py  test_spectral_matching.py  test_spectral_matching_extended.py  test_spectrum.py  test_statistics.py  test_streaming.py  test_truthset.py  test_validation.py  test_vendor_mzml.py  test_workflows.py
python/tests/fixtures/: __init__.py  sample_data.py
