[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["masskit"]
omit = [
    "masskit/interactive_viz.py",
    "masskit/visualization.py",
]

[tool.coverage.report]
show_missing = true
fail_under = 65
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "except ImportError",
    "raise NotImplementedError",
]
